# smart-pot-companion

./: .dockerignore  .env.example  .gitignore  README.md
.github/workflows/: server-image.yml
esp32/smart_pot_esp32p4/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.secrets.example
esp32/smart_pot_esp32p4/docs/: expansion_board_wiring.md
esp32/smart_pot_esp32p4/main/: CMakeLists.txt  Kconfig.projbuild  app_asr.c  app_asr.h  app_board_config.h  app_cloud.c  app_cloud.h  app_llm.c  app_llm.h  app_main.c  app_memory.c  app_memory.h  app_motion.c  app_motion.h  app_sensors.c  app_sensors.h  app_time.c  app_time.h  app_tts.c  app_tts.h  app_types.h  app_ui.c  app_ui.h  app_voice.c  app_voice.h  app_volc_protocol.c  app_volc_protocol.h  app_wifi.c  app_wifi.h  cat_planter_img.c  idf_component.yml
esp32/smart_pot_esp32p4/main/assets/emoji_twemoji/: README.md
esp32/smart_pot_esp32p4/tools/: aliyun_nls_smoke_test.py  build_emoji_stickers.mjs  capture_serial.ps1  clear_home_blue_button.py  configure_aliyun_nls.py  png_to_lvgl_rgb565a8.py  volc_tts_payload_probe.ps1
infra/: docker-compose.yml  mosquitto.conf  server.Dockerfile
kotlin/: build.gradle.kts  gradle.properties  settings.gradle.kts
kotlin/androidApp/: build.gradle.kts
kotlin/androidApp/src/main/: AndroidManifest.xml
kotlin/androidApp/src/main/res/values/: colors.xml  styles.xml
kotlin/gradle/: libs.versions.toml
kotlin/server/: build.gradle.kts
kotlin/server/src/main/resources/db/migration/: V1__initial_schema.sql  (+3 more)
kotlin/shared-protocol/: build.gradle.kts
(+36 files in other folders)
